unpackaged/main/default/objects/Brand_Setting__mdt/Brand_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Brand Setting</label>
    <pluralLabel>Brand Settings</pluralLabel>
</CustomObject>