unpackaged/main/default/objects/Brand_Setting__mdt/fields/Brand_Email__c.field-meta.xml
<CustomField>
    <fullName>Brand_Email__c</fullName>
    <label>Brand Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>