unpackaged/main/default/objects/Brand_Setting__mdt/fields/Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Id__c</fullName>
    <label>Brand Id</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>