unpackaged/main/default/objects/Brand_Setting__mdt/fields/Brand_Phone__c.field-meta.xml
<CustomField>
    <fullName>Brand_Phone__c</fullName>
    <label>Brand Phone</label>
    <type>Phone</type>
</CustomField>