unpackaged/main/default/objects/Brand_Setting__mdt/fields/Brand_website_link__c.field-meta.xml
<CustomField>
    <fullName>Brand_website_link__c</fullName>
    <label>Brand website link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>