unpackaged/main/default/objects/Brand_Setting__mdt/fields/Community_Id__c.field-meta.xml
<CustomField>
    <fullName>Community_Id__c</fullName>
    <label>Community Id **Not Used</label>
    <length>18</length>
    <type>Text</type>
</CustomField>