unpackaged/main/default/objects/Brand_Setting__mdt/fields/Covid_URL__c.field-meta.xml
<CustomField>
    <fullName>Covid_URL__c</fullName>
    <label>Covid URL</label>
    <type>Url</type>
</CustomField>