unpackaged/main/default/objects/Brand_Setting__mdt/fields/Order_Status_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_URL__c</fullName>
    <label>Order Status URL</label>
    <type>Url</type>
</CustomField>