unpackaged/main/default/objects/Brand_Setting__mdt/fields/Outbound_Privacy_Email__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Privacy_Email__c</fullName>
    <label>Outbound Privacy Email</label>
    <type>Email</type>
</CustomField>