unpackaged/main/default/objects/Brand_Setting__mdt/fields/Personal_Info_Link__c.field-meta.xml
<CustomField>
    <fullName>Personal_Info_Link__c</fullName>
    <label>Personal Info Link</label>
    <type>Url</type>
</CustomField>