unpackaged/main/default/objects/Brand_Setting__mdt/fields/Privacy_Auto_Response_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Auto_Response_Email_Template__c</fullName>
    <label>Privacy Auto Response Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>