unpackaged/main/default/objects/Brand_Setting__mdt/fields/Privacy_Email__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Email__c</fullName>
    <label>Privacy Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>