unpackaged/main/default/objects/Brand_Setting__mdt/fields/Privacy_Policy__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy__c</fullName>
    <label>Privacy Policy</label>
    <type>Url</type>
</CustomField>