unpackaged/main/default/objects/Brand_Setting__mdt/fields/Product_Questions_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Questions_URL__c</fullName>
    <label>Product Questions URL</label>
    <type>Url</type>
</CustomField>