unpackaged/main/default/objects/Brand_Setting__mdt/fields/Promotions_URL__c.field-meta.xml
<CustomField>
    <fullName>Promotions_URL__c</fullName>
    <label>Promotions URL</label>
    <type>Url</type>
</CustomField>