unpackaged/main/default/objects/Brand_Setting__mdt/fields/Return_Questions_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_Questions_URL__c</fullName>
    <label>Return Questions URL</label>
    <type>Url</type>
</CustomField>