unpackaged/main/default/objects/Brand_Setting__mdt/fields/Shipping_Questions_URL__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Questions_URL__c</fullName>
    <label>Shipping Questions URL</label>
    <type>Url</type>
</CustomField>