unpackaged/main/default/objects/Brand_Setting__mdt/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <label>Survey Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>